cmake_minimum_required(VERSION 3.7)
project(frr)

include_directories(. lib)

add_library(frr
        lib/agentx.c
        lib/agg_table.c
        lib/atomlist.c
        lib/bfd.c
        lib/buffer.c
        lib/checksum.c
        lib/clippy.c
        lib/command.c
        lib/command_graph.c
        lib/command_match.c
        lib/command_py.c
        lib/csv.c
        lib/db.c
        lib/debug.c
        lib/distribute.c
        lib/ferr.c
        lib/filter.c
        lib/frrcu.c
        lib/frrlua.c
        lib/frr_pthread.c
        lib/frrstr.c
        lib/frr_zmq.c
        lib/getopt1.c
        lib/getopt.c
        lib/grammar_sandbox.c
        lib/grammar_sandbox_main.c
        lib/graph.c
        lib/hash.c
        lib/hook.c
        lib/id_alloc.c
        lib/if.c
        lib/if_rmap.c
        lib/imsg-buffer.c
        lib/imsg.c
        lib/jhash.c
        lib/json.c
        lib/keychain.c
        lib/lib_errors.c
        lib/libfrr.c
        lib/linklist.c
        lib/log.c
        lib/log_vty.c
        lib/md5.c
        lib/memory.c
        lib/memory_vty.c
        lib/mlag.c
        lib/module.c
        lib/mpls.c
        lib/netns_linux.c
        lib/netns_other.c
        lib/network.c
        lib/nexthop.c
        lib/nexthop_group.c
        lib/northbound.c
        lib/northbound_cli.c
        lib/northbound_confd.c
        lib/northbound_db.c
        lib/northbound_sysrepo.c
        lib/ntop.c
        lib/openbsd-tree.c
        lib/pid_output.c
        lib/plist.c
        lib/prefix.c
        lib/privs.c
        lib/ptm_lib.c
        lib/pullwr.c
        lib/qobj.c
        lib/resolver.c
        lib/ringbuf.c
        lib/routemap.c
        lib/sbuf.c
        lib/seqlock.c
        lib/sha256.c
        lib/sigevent.c
        lib/skiplist.c
        lib/snmp.c
        lib/sockopt.c
        lib/sockunion.c
        lib/spf_backoff.c
        lib/srcdest_table.c
        lib/stream.c
        lib/strlcat.c
        lib/strlcpy.c
        lib/systemd.c
        lib/table.c
        lib/termtable.c
        lib/thread.c
        lib/typerb.c
        lib/typesafe.c
        lib/vector.c
        lib/vrf.c
        lib/vty.c
        lib/wheel.c
        lib/workqueue.c
        lib/yang.c
        lib/yang_translator.c
        lib/yang_wrappers.c
        lib/zclient.c
        )

add_executable(zebra
        zebra/connected.c
        zebra/debug.c
        zebra/if_ioctl.c
        zebra/if_ioctl_solaris.c
        zebra/if_netlink.c
        zebra/if_sysctl.c
        zebra/interface.c
        zebra/ioctl.c
        zebra/ioctl_solaris.c
        zebra/ipforward_proc.c
        zebra/ipforward_solaris.c
        zebra/ipforward_sysctl.c
        zebra/irdp_interface.c
        zebra/irdp_main.c
        zebra/irdp_packet.c
        zebra/kernel_netlink.c
        zebra/kernel_socket.c
        zebra/label_manager.c
        zebra/main.c
        zebra/redistribute.c
        zebra/router-id.c
        zebra/rtadv.c
        zebra/rt_netlink.c
        zebra/rtread_getmsg.c
        zebra/rtread_netlink.c
        zebra/rtread_sysctl.c
        zebra/rt_socket.c
        zebra/rule_netlink.c
        zebra/rule_socket.c
        zebra/table_manager.c
        zebra/zapi_msg.c
        zebra/zebra_dplane.c
        zebra/zebra_errors.c
        zebra/zebra_fpm.c
        zebra/zebra_fpm_dt.c
        zebra/zebra_fpm_netlink.c
        zebra/zebra_fpm_protobuf.c
        zebra/zebra_l2.c
        zebra/zebra_memory.c
        zebra/zebra_mlag.c
        zebra/zebra_mpls.c
        zebra/zebra_mpls_netlink.c
        zebra/zebra_mpls_null.c
        zebra/zebra_mpls_openbsd.c
        zebra/zebra_mpls_vty.c
        zebra/zebra_mroute.c
        zebra/zebra_netns_id.c
        zebra/zebra_netns_notify.c
        zebra/zebra_nhg.c
        zebra/zebra_ns.c
        zebra/zebra_pbr.c
        zebra/zebra_ptm.c
        zebra/zebra_ptm_redistribute.c
        zebra/zebra_pw.c
        zebra/zebra_rib.c
        zebra/zebra_rnh.c
        zebra/zebra_routemap.c
        zebra/zebra_router.c
        zebra/zebra_snmp.c
        zebra/zebra_vrf.c
        zebra/zebra_vty.c
        zebra/zebra_vxlan.c
        zebra/zserv.c
        )
target_link_libraries(zebra frr)

add_executable(bgpd
        bgpd/bgp_addpath.c
        bgpd/bgp_advertise.c
        bgpd/bgp_aspath.c
        bgpd/bgp_attr.c
        bgpd/bgp_attr_evpn.c
        bgpd/bgp_bfd.c
        bgpd/bgp_bmp.c
        bgpd/bgp_btoa.c
        bgpd/bgp_clist.c
        bgpd/bgp_community.c
        bgpd/bgp_damp.c
        bgpd/bgpd.c
        bgpd/bgp_debug.c
        bgpd/bgp_dump.c
        bgpd/bgp_ecommunity.c
        bgpd/bgp_encap_tlv.c
        bgpd/bgp_errors.c
        bgpd/bgp_evpn.c
        bgpd/bgp_evpn_vty.c
        bgpd/bgp_filter.c
        bgpd/bgp_flowspec.c
        bgpd/bgp_flowspec_util.c
        bgpd/bgp_flowspec_vty.c
        bgpd/bgp_fsm.c
        bgpd/bgp_io.c
        bgpd/bgp_keepalives.c
        bgpd/bgp_label.c
        bgpd/bgp_labelpool.c
        bgpd/bgp_lcommunity.c
        bgpd/bgp_mac.c
        bgpd/bgp_main.c
        bgpd/bgp_memory.c
        bgpd/bgp_mpath.c
        bgpd/bgp_mplsvpn.c
        bgpd/bgp_network.c
        bgpd/bgp_nexthop.c
        bgpd/bgp_nht.c
        bgpd/bgp_open.c
        bgpd/bgp_packet.c
        bgpd/bgp_pbr.c
        bgpd/bgp_rd.c
        bgpd/bgp_regex.c
        bgpd/bgp_route.c
        bgpd/bgp_routemap.c
        bgpd/bgp_rpki.c
        bgpd/bgp_snmp.c
        bgpd/bgp_table.c
        bgpd/bgp_updgrp_adv.c
        bgpd/bgp_updgrp.c
        bgpd/bgp_updgrp_packet.c
        bgpd/bgp_vpn.c
        bgpd/bgp_vty.c
        bgpd/bgp_zebra.c
        )
target_link_libraries(bgpd frr)